<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountryDetailsActivity">

    <ImageView
        android:id="@+id/imgDetailFlagIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/magin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/dk" />

    <TextView
        android:id="@+id/txtCDetailountryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/magin_medium"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDetailFlagIcon"
        tools:text="Denmark" />

    <TextView
        android:id="@+id/txtDetailCasesHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/magin_medium"
        android:layout_marginTop="@dimen/magin_medium"
        android:text="@string/cases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCDetailountryName" />

    <TextView
        android:id="@+id/txtDetailCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/txtDetailDeathsHeading"
        app:layout_constraintTop_toTopOf="@+id/txtDetailCasesHeading"
        tools:text="1000" />

    <TextView
        android:id="@+id/txtDetailDeathsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/deaths"
        app:layout_constraintStart_toStartOf="@+id/txtDetailCasesHeading"
        app:layout_constraintTop_toBottomOf="@+id/txtDetailCasesHeading" />

    <TextView
        android:id="@+id/txtDetailDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txtDetailCases"
        app:layout_constraintTop_toTopOf="@+id/txtDetailDeathsHeading"
        tools:text="10" />

    <TextView
        android:id="@+id/txtDetailUserRatingHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/user_rating"
        app:layout_constraintStart_toStartOf="@+id/txtDetailDeathsHeading"
        app:layout_constraintTop_toBottomOf="@+id/txtDetailDeathsHeading" />

    <TextView
        android:id="@+id/txtDetailUserRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/magin_small"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtDetailUserRatingHeading"
        app:layout_constraintTop_toTopOf="@+id/txtDetailUserRatingHeading"
        tools:text="7.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/txtDetailUserNotesHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/magin_small"
        android:text="@string/user_notes"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtDetailUserRatingHeading"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/txtDetailUserNotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/magin_medium"
        android:layout_marginBottom="@dimen/magin_medium"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtDetailUserNotesHeading"
        app:layout_constraintTop_toBottomOf="@+id/txtDetailUserNotesHeading"
        tools:text="XXX XX XXXXXX XXXX XX XXXXXX XX X. XXXX XX XXXXXX XXXXXXX XX X" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/magin_medium"
        android:layout_marginBottom="@dimen/magin_medium"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/magin_medium"
        android:layout_marginBottom="@dimen/magin_medium"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>